# IA_challenge_Artefact_TheoRiffel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  RESPONSE_CONTRACTS.md
evals/: README.md  __init__.py  answer_quality.py  cases.py  ground_truth.py  live.py  routing.py  run.py  stub_model.py  test_answer_quality.py  test_routing.py
examples/: 01_preco_promocao_ativa.md  02_pedido_cancelado.md  02_pedido_cancelado_e_devolucao.md  03_busca_escopo_e_fora_de_contexto.md  04_produto_descontinuado.md
src/emporio_agente/: __init__.py  agent.py  cli.py  config.py  dependencies.py  models.py  persona.py  pricing.py  session.py  trace.py
src/emporio_agente/data/: __init__.py  search.py  store.py
src/emporio_agente/policies/: __init__.py  chunker.py  retriever.py
src/emporio_agente/tools/: __init__.py  registry.py
tests/: conftest.py  test_data_layer.py  test_policies.py  test_pricing.py  test_search.py  test_trace.py  test_validation.py
