[project]
name = "emporio-agente"
version = "0.1.0"
description = "Agente de atendimento da Empório da Música (desafio AI Engineer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.6",
    "pandas>=2.0",
    "numpy>=1.24",
    "sentence-transformers>=2.6",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
emporio = "emporio_agente.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emporio_agente"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
