[project]
name = "emporio-agente"
version = "0.1.0"
description = "Agente de atendimento da Empório da Música (desafio AI Engineer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.6",
    "pandas>=2.0",
    "numpy>=1.24",
    "sentence-transformers>=2.6",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
emporio = "emporio_agente.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emporio_agente"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
# `live` evals call a real model and are opt-in: deselected by default, run
# explicitly with `pytest evals/ -m live` (and even then they skip without a
# configured provider).
addopts = "-m 'not live'"
markers = [
    "live: end-to-end evals that call a real model; skipped without a provider key/endpoint",
]
